@@ -3,14 +3,13 @@
 #include "midicontrollable.h"
 
 
-void MidiControllerContext::setMidiValueRT(int value)
+void MidiControllerContext::setMidiValueRT(unsigned int value)
 {
-  for (typeof(mcAbles.constBegin()) it = mcAbles.constBegin();
-       it != mcAbles.constEnd();
-       it++) {
-    if((*it)->setMidiValueRT(value)) {
-      synthdata->mcSet.put(*it);
-      synthdata->pipeMessage |= 1;
+    for (typeof(mcAbles.constBegin()) it = mcAbles.constBegin();
+            it != mcAbles.constEnd(); it++) {
+        if ((*it)->setMidiValueRT(value)) {
+            synthdata->mcSet.put(*it);
+            synthdata->pipeMessage |= 1;
+        }
     }
-  }
 }
